[gd_scene load_steps=27 format=3 uid="uid://sbscq77w8x23"]

[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_1ouug"]
[ext_resource type="Script" path="res://addons/phantom_camera/examples/scripts/3D/NPC.gd" id="2_2n1da"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3D.gd" id="2_y3dy8"]
[ext_resource type="PackedScene" path="res://addons/phantom_camera/examples/Models/3DPrototypeCubeDark.tscn" id="3_f5qrw"]
[ext_resource type="Script" path="res://addons/phantom_camera/examples/scripts/3D/trigger_area.gd" id="4_moad5"]
[ext_resource type="Script" path="res://addons/phantom_camera/examples/scripts/3D/player_controller.gd" id="5_c85ys"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_g0eml"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_flw6w"]
albedo_color = Color(0.988235, 0.498039, 0.498039, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dy1i7"]

[sub_resource type="BoxMesh" id="BoxMesh_7tjw4"]
size = Vector3(2, 0.5, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hpllm"]
transparency = 1
albedo_color = Color(0.988235, 0.478431, 0.905882, 0.0901961)

[sub_resource type="BoxShape3D" id="BoxShape3D_65o6h"]
size = Vector3(2, 0.5, 4)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tpc7d"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v5iy7"]
albedo_color = Color(0.988235, 0.478431, 0.905882, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_umkiq"]
transparency = 1
albedo_color = Color(0.486275, 0.411765, 0.572549, 0.494118)

[sub_resource type="BoxMesh" id="BoxMesh_d2g24"]
material = SubResource("StandardMaterial3D_umkiq")
size = Vector3(6, 0.1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_ctyr8"]
size = Vector3(6, 0.1, 10)

[sub_resource type="BoxMesh" id="BoxMesh_ugc3s"]
size = Vector3(1, 1, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_68thd"]
albedo_color = Color(0.34902, 0.862745, 0.854902, 1)

[sub_resource type="BoxMesh" id="BoxMesh_wphly"]
size = Vector3(1, 0.5, 1)

[sub_resource type="BoxMesh" id="BoxMesh_gyp5s"]
size = Vector3(20, 40, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_lfaqs"]
size = Vector3(20, 40, 30)

[sub_resource type="BoxMesh" id="BoxMesh_n70lt"]
size = Vector3(14, 40, 6)

[sub_resource type="BoxShape3D" id="BoxShape3D_jxmqm"]
size = Vector3(14, 40, 6)

[sub_resource type="BoxMesh" id="BoxMesh_x0tgm"]
size = Vector3(50, 40, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_t67ef"]
size = Vector3(50, 40, 5)

[node name="Root" type="Node3D"]

[node name="------ Camera ------" type="Node" parent="."]

[node name="MainCamera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.707124, 0.707088, 0, -0.707088, 0.707124, 0.0451293, 2.94688, 5.77459)

[node name="PhantomCameraHost" type="Node" parent="MainCamera3D"]
script = ExtResource("1_1ouug")

[node name="PlayerGroup" type="Node" parent="."]

[node name="PlayerPhantomCamera3D" type="Node3D" parent="PlayerGroup"]
transform = Transform3D(0.999889, 0, 0, 0, 0.707093, 0.707089, 0, -0.707093, 0.707089, 0.0451293, 2.94688, 5.77459)
script = ExtResource("2_y3dy8")
Priority = 3
"Trigger on Load" = true
"Follow Parameters/Distance" = 0.632
"Follow Target" = NodePath("../PlayerCharacterBody3D")
"Follow Parameters/Target Offset" = Vector3(0, 2, 1.5)
"Follow Parameters/Damping" = true
"Follow Parameters/Damping Value" = 17.0
"Look At Target" = NodePath("")
"Tween Properties/Duration" = 0.6
"Tween Properties/Transition" = 1
"Tween Properties/Ease" = 0

[node name="PlayerCharacterBody3D" type="CharacterBody3D" parent="PlayerGroup"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0451293, 0.5, 3.82771)
script = ExtResource("5_c85ys")
metadata/_edit_group_ = true

[node name="PlayerMeshInstance3D" type="MeshInstance3D" parent="PlayerGroup/PlayerCharacterBody3D"]
mesh = SubResource("CapsuleMesh_g0eml")
surface_material_override/0 = SubResource("StandardMaterial3D_flw6w")

[node name="PlayerArea3D" type="Area3D" parent="PlayerGroup/PlayerCharacterBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerGroup/PlayerCharacterBody3D/PlayerArea3D"]
shape = SubResource("CapsuleShape3D_dy1i7")

[node name="PlayerCollisionShape3D" type="CollisionShape3D" parent="PlayerGroup/PlayerCharacterBody3D"]
shape = SubResource("CapsuleShape3D_dy1i7")

[node name="NPCGroup" type="Node" parent="."]

[node name="NPCPhantomCamera3D" type="Node3D" parent="NPCGroup"]
unique_name_in_owner = true
transform = Transform3D(0.616596, -0.109786, 0.779587, -2.23517e-08, 0.990229, 0.139449, -0.78728, -0.0859841, 0.610572, -2.98802, 1.50739, 1.19719)
script = ExtResource("2_y3dy8")
Priority = 0
"Trigger on Load" = true
"Follow Parameters/Distance" = 1.0
"Follow Target" = NodePath("")
"Look At Target" = NodePath("")
"Tween Properties/Duration" = 1.0
"Tween Properties/Transition" = 3
"Tween Properties/Ease" = 0

[node name="NPCDescriptionLabel" type="Label3D" parent="NPCGroup"]
transform = Transform3D(0.573577, -0.814813, -0.0842028, -2.63912e-09, -0.102793, 0.994703, -0.819152, -0.570538, -0.0589594, -3.45688, -0.413709, 0.7329)
text = "Input Example"
font_size = 96

[node name="NPCDialogueExampleLabel" type="Label3D" parent="NPCGroup"]
unique_name_in_owner = true
transform = Transform3D(1, 4.54671e-10, 1.65487e-10, 4.25644e-10, 0.939693, 0.34202, 0, -0.34202, 0.939693, -4.46738, 1.58641, -0.253679)
modulate = Color(1, 0.603922, 0.254902, 1)
text = "Press [ F ] to change camera"

[node name="NPCInteractionZoneMesh" type="MeshInstance3D" parent="NPCGroup"]
transform = Transform3D(0.819152, 4.83851e-10, -0.573576, -3.92481e-09, 1, -6.3473e-09, 0.573576, 7.45058e-09, 0.819152, -3.46138, -0.5, 0.775321)
mesh = SubResource("BoxMesh_7tjw4")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_hpllm")
metadata/_edit_group_ = true

[node name="NPCInteractionArea3D" type="Area3D" parent="NPCGroup/NPCInteractionZoneMesh"]
unique_name_in_owner = true
transform = Transform3D(1, -2.68591e-26, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
monitorable = false

[node name="NPCInterationCollisionShape3D" type="CollisionShape3D" parent="NPCGroup/NPCInteractionZoneMesh/NPCInteractionArea3D"]
shape = SubResource("BoxShape3D_65o6h")

[node name="NPC" type="StaticBody3D" parent="NPCGroup"]
transform = Transform3D(1, 4.83851e-10, 0, 4.25644e-10, 1, -7.45058e-09, 0, 7.45058e-09, 1, -4.56338, 0.5, -0.272679)
script = ExtResource("2_2n1da")

[node name="PlayerCollisionShape3D2" type="CollisionShape3D" parent="NPCGroup/NPC"]
transform = Transform3D(1, -2.68591e-26, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_tpc7d")

[node name="NPCMesh" type="MeshInstance3D" parent="NPCGroup/NPC"]
transform = Transform3D(1, -2.68591e-26, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_g0eml")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_v5iy7")

[node name="MoveToLocation" type="Node3D" parent="NPCGroup"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.70084, 0.5, 0.962891)

[node name="FixedCameraTriggerZone" type="Node" parent="."]

[node name="PurpleAreaPhantomCamera3D" type="Node3D" parent="FixedCameraTriggerZone"]
transform = Transform3D(-4.37113e-08, 0.5, -0.866024, 0, 0.866025, 0.499999, 0.999998, 2.18557e-08, -3.78551e-08, -1.00259, 4.73364, 3.02374)
script = ExtResource("2_y3dy8")
Priority = 0
"Trigger on Load" = true
"Follow Parameters/Distance" = 1.0
"Follow Target" = NodePath("")
"Look At Target" = NodePath("")
"Tween Properties/Duration" = 0.6
"Tween Properties/Transition" = 4
"Tween Properties/Ease" = 0

[node name="FixedCameraLabel" type="Label3D" parent="FixedCameraTriggerZone"]
unique_name_in_owner = true
transform = Transform3D(0.707107, 0.707107, -6.70552e-08, 0, 0, 1, 0.707107, -0.707107, -2.98023e-08, 2.89416, 0.149986, 2.80567)
text = "Fixed Camera
Example"
font_size = 96

[node name="PurpleArea3D" type="Area3D" parent="FixedCameraTriggerZone" node_paths=PackedStringArray("area_pcam")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 3)
priority = 5.0
script = ExtResource("4_moad5")
area_pcam = NodePath("../PurpleAreaPhantomCamera3D")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="FixedCameraTriggerZone/PurpleArea3D"]
mesh = SubResource("BoxMesh_d2g24")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FixedCameraTriggerZone/PurpleArea3D"]
shape = SubResource("BoxShape3D_ctyr8")

[node name="CSGMesh3D" type="CSGMesh3D" parent="FixedCameraTriggerZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.14238, 1.82571, 2.88655)
mesh = SubResource("BoxMesh_ugc3s")
material = SubResource("StandardMaterial3D_68thd")

[node name="CSGMesh3D2" type="CSGMesh3D" parent="FixedCameraTriggerZone/CSGMesh3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00192642, -0.0120339, 0.00494432)
operation = 2
mesh = SubResource("BoxMesh_wphly")
material = SubResource("StandardMaterial3D_68thd")

[node name="Node" type="Node" parent="."]

[node name="Environment" type="Node" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 8, 0)
metadata/_edit_lock_ = true

[node name="Environment" type="Node3D" parent="Environment"]

[node name="Floor" parent="Environment/Environment" instance=ExtResource("3_f5qrw")]
transform = Transform3D(1000, 0, 0, 0, 1, 0, 0, 0, 1000, 0, -1, 0)
metadata/_edit_lock_ = true

[node name="Left Wall" type="StaticBody3D" parent="Environment/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0.5, -6)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Environment/Environment/Left Wall"]
visible = false
mesh = SubResource("BoxMesh_gyp5s")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Environment/Left Wall"]
shape = SubResource("BoxShape3D_lfaqs")

[node name="Left Wall2" type="StaticBody3D" parent="Environment/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.9994, 0.501687, -11.0005)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Environment/Environment/Left Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
visible = false
mesh = SubResource("BoxMesh_gyp5s")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Environment/Left Wall2"]
shape = SubResource("BoxShape3D_lfaqs")

[node name="Left Wall3" type="StaticBody3D" parent="Environment/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -6.90828)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Environment/Environment/Left Wall3"]
visible = false
mesh = SubResource("BoxMesh_n70lt")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Environment/Left Wall3"]
shape = SubResource("BoxShape3D_jxmqm")

[node name="Back Wall" type="StaticBody3D" parent="Environment/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.26633e-05, 0.499742, 10.5)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Environment/Environment/Back Wall"]
visible = false
mesh = SubResource("BoxMesh_x0tgm")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Environment/Back Wall"]
shape = SubResource("BoxShape3D_t67ef")
